package com.codecool.dungeoncrawl.logic.MapObject.items.weapon;

public interface Weapon {
    public void increaseDamage();
}
