@startuml

title __WEAPON's Class Diagram__\n

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace MapObject.items {
        namespace weapon {
          class com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Bazooka {
              + Bazooka()
              + getTileName()
              + increaseDamage()
              + toString()
          }
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace MapObject.items {
        namespace weapon {
          class com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Uzi {
              + Uzi()
              + getTileName()
              + increaseDamage()
              + toString()
          }
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace MapObject.items {
        namespace weapon {
          interface com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Weapon {
              {abstract} + increaseDamage()
          }
        }
      }
    }
  }
  

  com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Bazooka .up.|> com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Weapon
  com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Bazooka -up-|> com.codecool.dungeoncrawl.logic.MapObject.items.Item
  com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Uzi .up.|> com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Weapon
  com.codecool.dungeoncrawl.logic.MapObject.items.weapon.Uzi -up-|> com.codecool.dungeoncrawl.logic.MapObject.items.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
